# GameBTC_Rhythmgame

./: CMakeLists.txt  README.md
assets/chart/: chart1.txt  chart2.txt  chart3.txt  chart4.txt  chart5.txt  chart6.txt
libs/SDL2/include/: SDL_stdinc.h
src/: AfterGame.cpp  AfterGame.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Menu.cpp  Menu.h  Note.cpp  Note.h  ParticleSystem.cpp  ParticleSystem.h  Song.h  SoundManager.cpp  SoundManager.h  TextureManager.h  Texturemanager.cpp  main.cpp
